[metadata]
name = Kilyaba-Translator
version = 1.0
description = A translator for the conlang, Kilyaba
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Sparklx
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = kilyaba_translator
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    kilyaba-translator=kilyaba_translator:main
